src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>B2B Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>B2C Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>CXE Sales Process</fullName>
        <description>CXE Sales Process for CXE Opportunity Record Type</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SME Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Accredited_Meralco_Contractor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accredited Meralco Contractor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Service_Provider__c.Type__c</field>
                <operation>equals</operation>
                <value>Accredited Meralco Contractor (AMC), Accredited Meralco Contractor (AMC)/Third Party Service Provider</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Service_Provider__c</referenceTo>
        <relationshipLabel>Opportunities (AMC)</relationshipLabel>
        <relationshipName>Opportunity_Service_Provider</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barangay__c</fullName>
        <label>Barangay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bundle</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordTypeId</field>
                <operation>equals</operation>
                <value>Bundle</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City_Municipality__c</fullName>
        <label>City / Municipality</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Service_Province__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BATANGAS CITY</fullName>
                </value>
                <value>
                    <fullName>SAN JOSE</fullName>
                </value>
                <value>
                    <fullName>SAN PASCUAL</fullName>
                </value>
                <value>
                    <fullName>STO. TOMAS</fullName>
                </value>
                <value>
                    <fullName>TALISAY</fullName>
                </value>
                <value>
                    <fullName>TANAUAN</fullName>
                </value>
                <value>
                    <fullName>ANGAT</fullName>
                </value>
                <value>
                    <fullName>BALAGTAS</fullName>
                </value>
                <value>
                    <fullName>BALIUAG</fullName>
                </value>
                <value>
                    <fullName>BOCAUE</fullName>
                </value>
                <value>
                    <fullName>BULACAN</fullName>
                </value>
                <value>
                    <fullName>BUSTOS</fullName>
                </value>
                <value>
                    <fullName>CALUMPIT</fullName>
                </value>
                <value>
                    <fullName>DONA REMEDIOS TRINIDAD</fullName>
                </value>
                <value>
                    <fullName>GUIGUINTO</fullName>
                </value>
                <value>
                    <fullName>HAGONOY</fullName>
                </value>
                <value>
                    <fullName>MALOLOS CITY</fullName>
                </value>
                <value>
                    <fullName>MARILAO</fullName>
                </value>
                <value>
                    <fullName>MEYCAUAYAN</fullName>
                </value>
                <value>
                    <fullName>NORZAGARAY</fullName>
                </value>
                <value>
                    <fullName>OBANDO</fullName>
                </value>
                <value>
                    <fullName>PANDI</fullName>
                </value>
                <value>
                    <fullName>PAOMBONG</fullName>
                </value>
                <value>
                    <fullName>PLARIDEL</fullName>
                </value>
                <value>
                    <fullName>PULILAN</fullName>
                </value>
                <value>
                    <fullName>SAN ILDEFONSO</fullName>
                </value>
                <value>
                    <fullName>SAN JOSE DEL MONTE CITY</fullName>
                </value>
                <value>
                    <fullName>SAN MIGUEL</fullName>
                </value>
                <value>
                    <fullName>SAN RAFAEL</fullName>
                </value>
                <value>
                    <fullName>SANTA MARIA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reason__c</fullName>
        <description>Specify a reason why the Opportunity was Lost. Cannot be empty if Opportunity Stage is set to &quot;Closed Lost&quot;</description>
        <label>Closed Lost Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cooling_off_End_Date__c</fullName>
        <label>Cooling off End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <description>This field is used for reporting purposes using Power of One concept.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Value is 1 for this field. This is a background field.</inlineHelpText>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DU_Services__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DU Services</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Service_Provider__c.Type__c</field>
                <operation>equals</operation>
                <value>Internal DU</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Service_Provider__c</referenceTo>
        <relationshipLabel>Opportunities (DU Services)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Opportunity Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Type ,&quot;&quot;),&quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, &quot;Close Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( Amount &lt;= 0, &quot;Amount, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( LeadSource,&quot;&quot;), &quot;Lead Source, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(NextStep)=0, &quot;Next Steps&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Type,&quot;&quot;), 0,20) + IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( Amount &lt;= 0, 0,20) + IF( ISPICKVAL( LeadSource,&quot;&quot;), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Expiry__c</fullName>
        <formula>Expiration_Date__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Expiry</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Value__c</fullName>
        <formula>(Total_Price_of_Product__c +  Margin_Value__c )* Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Docusign_En__c</fullName>
        <label>Docusign Envelope ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docusign_Status__c</fullName>
        <description>Displays the status of the Quote in Docusign</description>
        <label>Docusign Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration_status__c</fullName>
        <label>Duration status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Defined with renewal</fullName>
                </value>
                <value>
                    <fullName>Undefined</fullName>
                </value>
                <value>
                    <fullName>Defined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ERP_Account_Id__c</fullName>
        <formula>Account.ERPAccountID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ERP Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <defaultValue>TODAY()+30</defaultValue>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grand_Total__c</fullName>
        <formula>Total_Price_of_Product__c +  Margin_Value__c + Taxation__c - Discount_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grand Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IBAN__c</fullName>
        <label>IBAN</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Record_Type__c</fullName>
        <label>Lead Record Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Margin_Value__c</fullName>
        <formula>Total_Price_of_Product__c *   Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Margin</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Method_of_Payment__c</fullName>
        <label>Method of Payment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Cheque</fullName>
                    <default>true</default>
                    <label>Cheque</label>
                </value>
                <value>
                    <fullName>Credit card</fullName>
                </value>
                <value>
                    <fullName>Direct Debit</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_Of_Opp_Product__c</fullName>
        <label>Number Of Opp Product</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Commercial Product</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OPP_ACCOUNT_CUST_STATUS__c</fullName>
        <formula>TEXT(Account.Customer_Accepted__c)</formula>
        <label>OPP_ACCOUNT_CUST_STATUS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <label>Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Service Application</fullName>
                </value>
                <value>
                    <fullName>Third Party Service/Product</fullName>
                </value>
                <value>
                    <fullName>Subsidiary Service/Product</fullName>
                </value>
                <value>
                    <fullName>DU Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Day__c</fullName>
        <label>Payment Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st of month</fullName>
                    <default>true</default>
                    <label>1st of month</label>
                </value>
                <value>
                    <fullName>Last day of month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Schedule__c</fullName>
        <label>Payment Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>14 days</fullName>
                    <default>true</default>
                    <label>14 days</label>
                </value>
                <value>
                    <fullName>Cash on delivery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Specification__c</fullName>
        <label>Payment Specification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Terms_Base_Days__c</fullName>
        <label>Payment Terms Base Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pending_Security_stage_Date__c</fullName>
        <label>Pending Security stage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_Reason__c</fullName>
        <label>Quote Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Business</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
                <value>
                    <fullName>Extension</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Status__c</fullName>
        <label>Quote Status</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Deposit_Condition__c</fullName>
        <label>Security Deposit Condition</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Offered__c</fullName>
        <label>Service Offered</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Service_Provider__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Transmission Lines</fullName>
                </value>
                <value>
                    <fullName>Distribution Lines</fullName>
                </value>
                <value>
                    <fullName>Substations</fullName>
                </value>
                <value>
                    <fullName>STP</fullName>
                </value>
                <value>
                    <fullName>Township Developments</fullName>
                </value>
                <value>
                    <fullName>Power Centers</fullName>
                </value>
                <value>
                    <fullName>PMS</fullName>
                </value>
                <value>
                    <fullName>Fit-out Works</fullName>
                </value>
                <value>
                    <fullName>Mechanical, Electrical, Plumbing, Fire Protection</fullName>
                </value>
                <value>
                    <fullName>Vehicle Leasing &amp; Fleet Management</fullName>
                </value>
                <value>
                    <fullName>Job Contracting Services</fullName>
                </value>
                <value>
                    <fullName>ELINE</fullName>
                </value>
                <value>
                    <fullName>VPN</fullName>
                </value>
                <value>
                    <fullName>DIA</fullName>
                </value>
                <value>
                    <fullName>HCS</fullName>
                </value>
                <value>
                    <fullName>Outright Purchase of Solar Panels</fullName>
                </value>
                <value>
                    <fullName>Modified Lease of Solar Panels</fullName>
                </value>
                <value>
                    <fullName>Trainings and Seminars</fullName>
                </value>
                <value>
                    <fullName>Electronic Vehicle (EV)</fullName>
                </value>
                <value>
                    <fullName>HVAC</fullName>
                </value>
                <value>
                    <fullName>Lighting</fullName>
                </value>
                <value>
                    <fullName>Conversion from Secondary to Primary Metering</fullName>
                </value>
                <value>
                    <fullName>Emergency Works</fullName>
                </value>
                <value>
                    <fullName>Energy Audit</fullName>
                </value>
                <value>
                    <fullName>Engineering Procurement and Construction</fullName>
                </value>
                <value>
                    <fullName>Equipment Rental</fullName>
                </value>
                <value>
                    <fullName>Load Profiling and Load Profile Analysis</fullName>
                </value>
                <value>
                    <fullName>Meralco Managed Services</fullName>
                </value>
                <value>
                    <fullName>Power Quality Solutions</fullName>
                </value>
                <value>
                    <fullName>Power Factor Correction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Provider__c</fullName>
        <label>Service Provider</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Opportunity_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MIESCOR</fullName>
                </value>
                <value>
                    <fullName>Radius</fullName>
                </value>
                <value>
                    <fullName>Spectrum</fullName>
                </value>
                <value>
                    <fullName>First Pacific Learning Academy</fullName>
                </value>
                <value>
                    <fullName>MSERV</fullName>
                </value>
                <value>
                    <fullName>CBG</fullName>
                </value>
                <value>
                    <fullName>3BS Electrical &amp; Construction Corp.</fullName>
                </value>
                <value>
                    <fullName>3MV CONSTRUCTION CORPORATION</fullName>
                </value>
                <value>
                    <fullName>480 Builders</fullName>
                </value>
                <value>
                    <fullName>Aktino Builders Corporation</fullName>
                </value>
                <value>
                    <fullName>ALFREDO Y. GOMEZ ELECTRICAL CONTRACTOR</fullName>
                </value>
                <value>
                    <fullName>Aspen Construction &amp; Development Corp.</fullName>
                </value>
                <value>
                    <fullName>Ayin Contractor &amp; Trading Corp</fullName>
                </value>
                <value>
                    <fullName>Best Builder Construction</fullName>
                </value>
                <value>
                    <fullName>Bhong Electrical Contractor (Power Contractors…</fullName>
                </value>
                <value>
                    <fullName>Blue Arch Engineering Enterprise and Services</fullName>
                </value>
                <value>
                    <fullName>Brahma Industrial Corp.</fullName>
                </value>
                <value>
                    <fullName>Build Asia Corp.</fullName>
                </value>
                <value>
                    <fullName>BYR Construction</fullName>
                </value>
                <value>
                    <fullName>Calisay Electrical Services</fullName>
                </value>
                <value>
                    <fullName>Celcotec Industrial Corp</fullName>
                </value>
                <value>
                    <fullName>Centra Electrosystems, Inc.</fullName>
                </value>
                <value>
                    <fullName>Challenger Contracting Business Corp.</fullName>
                </value>
                <value>
                    <fullName>CJA Electrical Contractors Co.</fullName>
                </value>
                <value>
                    <fullName>CTVILL Builders Corp</fullName>
                </value>
                <value>
                    <fullName>Dream Makers Construction</fullName>
                </value>
                <value>
                    <fullName>E. C. Caldejon Construction</fullName>
                </value>
                <value>
                    <fullName>Elecon Construction Corp</fullName>
                </value>
                <value>
                    <fullName>Electrosoft Inc.</fullName>
                </value>
                <value>
                    <fullName>EMAN Electrical Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Province__c</fullName>
        <label>Province</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BATANGAS</fullName>
                </value>
                <value>
                    <fullName>BULACAN</fullName>
                </value>
                <value>
                    <fullName>CAVITE</fullName>
                </value>
                <value>
                    <fullName>LAGUNA</fullName>
                </value>
                <value>
                    <fullName>METRO MANILA</fullName>
                </value>
                <value>
                    <fullName>NUEVA ECIJA</fullName>
                </value>
                <value>
                    <fullName>PAMPANGA</fullName>
                </value>
                <value>
                    <fullName>QUEZON</fullName>
                </value>
                <value>
                    <fullName>RIZAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <label>Street Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_No__c</fullName>
        <label>House #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Subdivision__c</fullName>
        <label>Subdivision / Bldg Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subsidiary_Service_Product_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subsidiary Service/Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Service_Provider__c.Type__c</field>
                <operation>equals</operation>
                <value>Subsidiary</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Service_Provider__c</referenceTo>
        <relationshipLabel>Opportunities (Subsidiary Service/Product)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <defaultValue>0.21</defaultValue>
        <label>Tax</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Taxation__c</fullName>
        <formula>(Total_Price_of_Product__c + Margin_Value__c - Discount_Value__c )* Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taxation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Terms_of_Payment__c</fullName>
        <label>Terms of Payment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>14d end of month</fullName>
                </value>
                <value>
                    <fullName>14d net</fullName>
                </value>
                <value>
                    <fullName>30d end of month</fullName>
                </value>
                <value>
                    <fullName>30d net</fullName>
                </value>
                <value>
                    <fullName>60d end of month</fullName>
                </value>
                <value>
                    <fullName>60d net</fullName>
                </value>
                <value>
                    <fullName>Cash on delivery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_Party_Service_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Third Party Service/Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Service_Provider__c.Type__c</field>
                <operation>equals</operation>
                <value>Third Party Service Provider</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Service_Provider__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Price_of_Product__c</fullName>
        <label>Total Price of Product</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unit_No__c</fullName>
        <label>Unit #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waiting_for_Security_Deposit__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Waiting for Security Deposit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Won_Lost_reason__c</fullName>
        <label>Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Feature</fullName>
                </value>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Need</fullName>
                </value>
                <value>
                    <fullName>Timing</fullName>
                </value>
                <value>
                    <fullName>Authority</fullName>
                </value>
                <value>
                    <fullName>Contract term</fullName>
                </value>
                <value>
                    <fullName>Lost momentum</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Customer Acceptance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
        <language>en_US</language>
    </listViews>
</CustomObject>